--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,7 +3,8 @@ MONGO_URI= mongodb+srv://fawasam:Fawas1234@cluster0.islh4uv.mongodb.net/bikeRent
 EMAIL_FROM=
 NODE_ENV =development
 CLIENT_URL =http://localhost:3000
-SERVER_URL_PRODUCTION
+SERVER_URL =http://localhost:5000
+
 JWT_ACCOUNT_ACTIVATION =@123helloActivate
 JWT_RESET_PASSWORD =@123helloReset
 JWT_SECRET_KEY =@123helloSecret
